title_upper_case_delete_scrollspy

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .cuerpo {
     background-color: #F0F2e9;
-    color: #071c44;
+    color: #011545;
     font-family: Arial, Helvetica, sans-serif
 }
 
